@@ -1,5 +1,10 @@
 2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>
 
+	* src/z80/gen.c:
+	  Implement RFE #636: optimize stack allocation for eZ80
+
+2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>
+
 	* src/SDCCval.c:
 	  Revert unnecessary change.
 
